Start conversion to C++.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
+CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
+
+PROJECT(tftdemo)
+
+INCLUDE_DIRECTORIES(.)
+
 SET(SRCS
-    Processors/TFT_eSPI_Generic.c
     TFT_eSPI.cpp
 )
 
 ADD_DEFINITIONS(-DSETUP_OPI_ZERO_ILI9341_PARALLEL)
 
-ADD_EXECUTABLE(tftdemo ${COMPONENT_SRCS})
+ADD_EXECUTABLE(tftdemo ${SRCS})
