Make it compile.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,15 @@ INCLUDE_DIRECTORIES(.)
 
 SET(SRCS
     TFT_eSPI.cpp
+    main.cpp
 )
 
 ADD_DEFINITIONS(-DSETUP_OPI_ZERO_ILI9341_PARALLEL)
 
 ADD_EXECUTABLE(tftdemo ${SRCS})
+
+SET(TARGET_HOST 192.168.1.229)
+
+TARGET_LINK_LIBRARIES(tftdemo stdc++ m)
+
+ADD_CUSTOM_COMMAND(TARGET tftdemo POST_BUILD COMMAND scp $<TARGET_FILE:tftdemo> ${TARGET_HOST}:)
