--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,6 @@ ADD_EXECUTABLE(tftdemo ${SRCS})
 
 SET(TARGET_HOST 192.168.1.229)
 
-TARGET_LINK_LIBRARIES(tftdemo stdc++ m)
+TARGET_LINK_LIBRARIES(tftdemo stdc++ m gpiodcxx gpiod)
 
 ADD_CUSTOM_COMMAND(TARGET tftdemo POST_BUILD COMMAND scp $<TARGET_FILE:tftdemo> ${TARGET_HOST}:)
